--- a/Examples/ExampleWebsite/ExampleWebsite.csproj
+++ b/Examples/ExampleWebsite/ExampleWebsite.csproj
@@ -2,11 +2,14 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <AssemblyName>ExampleWebsite</AssemblyName>
+    <RootNamespace>ExampleWebsite</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Metalsharp\Metalsharp.csproj" />
+    <ProjectReference Include="..\ExamplePlugin\ExamplePlugin.csproj" />
   </ItemGroup>
 
   <ItemGroup>
