--- a/Metalsharp/Metalsharp.csproj
+++ b/Metalsharp/Metalsharp.csproj
@@ -2,7 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <RootNamespace>Metal.Sharp</RootNamespace>
+    <RootNamespace>Metalsharp</RootNamespace>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Users\Timothy\Source\Repos\Metalsharp\Metalsharp\Metalsharp.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
