--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,7 @@ version: '{branch}-{build}'
 image: Visual Studio 2017
 branches:
   only:
-  - appveyor
+  - feature-appveyor
 init:
   - cmd: git config --global core.autocrlf true
 before_build:
