--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,5 +13,5 @@ build_script:
 test_script:
   - cmd: dotnet restore ./Metalsharp.Tests/Metalsharp.Tests.csproj --verbosity m
   - cmd: cd Metalsharp.Tests
-  - cmd: dotnet xunit
+  - cmd: dotnet test
 deploy: off
