--- a/Metalsharp.Examples/Metalsharp.ExampleWebsite/Metalsharp.ExampleWebsite.csproj
+++ b/Metalsharp.Examples/Metalsharp.ExampleWebsite/Metalsharp.ExampleWebsite.csproj
@@ -3,13 +3,13 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <AssemblyName>ExampleWebsite</AssemblyName>
-    <RootNamespace>ExampleWebsite</RootNamespace>
+    <AssemblyName>Metalsharp.ExampleWebsite</AssemblyName>
+    <RootNamespace>Metalsharp.ExampleWebsite</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Metalsharp\Metalsharp.csproj" />
-    <ProjectReference Include="..\ExamplePlugin\ExamplePlugin.csproj" />
+    <ProjectReference Include="..\Metalsharp.ExamplePlugin\Metalsharp.ExamplePlugin.csproj" />
   </ItemGroup>
 
   <ItemGroup>
