--- a/Metalsharp/Metalsharp.csproj
+++ b/Metalsharp/Metalsharp.csproj
@@ -7,12 +7,17 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile></DocumentationFile>
+    <DocumentationFile>bin\Debug\netstandard2.0\Metalsharp.xml</DocumentationFile>
+    <DocumentationMarkdown>..\Metalsharp.Documentation\README.md</DocumentationMarkdown>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Markdig" Version="0.15.4" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <PackageReference Include="Vsxmd" Version="1.3.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="YamlDotNet" Version="5.2.1" />
   </ItemGroup>
 
