--- a/Metalsharp.Examples/Metalsharp.ExampleWebsite/Metalsharp.ExampleWebsite.csproj
+++ b/Metalsharp.Examples/Metalsharp.ExampleWebsite/Metalsharp.ExampleWebsite.csproj
@@ -2,9 +2,9 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-    <AssemblyName>Metalsharp.ExampleWebsite</AssemblyName>
-    <RootNamespace>Metalsharp.ExampleWebsite</RootNamespace>
+    <TargetFramework>net6.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
