--- a/Metalsharp/Metalsharp.csproj
+++ b/Metalsharp/Metalsharp.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net6</TargetFramework>
     <RootNamespace>Metalsharp</RootNamespace>
     <LangVersion>latest</LangVersion>
     <RunPostBuildEvent>OnOutputUpdated</RunPostBuildEvent>
